--- a/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
+++ b/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
@@ -41,33 +41,48 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </imageView>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FW2-vC-x9G" userLabel="language" customClass="PaddingLabel" customModule="iOSEngineerCodeCheck" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r52-Vq-gsA">
                                             <rect key="frame" x="75" y="42" width="44" height="15"/>
-                                            <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FW2-vC-x9G" userLabel="language">
+                                                    <rect key="frame" x="7" y="0.0" width="30" height="15"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingLeft">
+                                                            <real key="value" value="7"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingRight">
+                                                            <real key="value" value="7"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingTop">
+                                                            <real key="value" value="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="paddingBottom">
+                                                            <real key="value" value="0.0"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemRedColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="15" id="Onv-9t-6vk"/>
+                                                <constraint firstAttribute="height" constant="15" id="7KE-j2-0AR"/>
+                                                <constraint firstItem="FW2-vC-x9G" firstAttribute="leading" secondItem="r52-Vq-gsA" secondAttribute="leading" constant="7" id="ZiP-Hj-qdF"/>
+                                                <constraint firstItem="FW2-vC-x9G" firstAttribute="top" secondItem="r52-Vq-gsA" secondAttribute="top" id="aJJ-GJ-2k4"/>
+                                                <constraint firstAttribute="bottom" secondItem="FW2-vC-x9G" secondAttribute="bottom" id="afI-m7-xzg"/>
+                                                <constraint firstAttribute="trailing" secondItem="FW2-vC-x9G" secondAttribute="trailing" constant="7" id="lUK-fQ-U1Z"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                     <integer key="value" value="5"/>
                                                 </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingLeft">
-                                                    <real key="value" value="7"/>
-                                                </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingRight">
-                                                    <real key="value" value="7"/>
-                                                </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingTop">
-                                                    <real key="value" value="0.0"/>
-                                                </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="number" keyPath="paddingBottom">
-                                                    <real key="value" value="0.0"/>
-                                                </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
-                                        </label>
+                                        </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UOG-FP-9X1" userLabel="name">
                                             <rect key="frame" x="75" y="4" width="329" height="25"/>
                                             <constraints>
@@ -89,16 +104,15 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="yfR-oa-3UZ" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="31B-sr-yzA"/>
-                                        <constraint firstAttribute="bottom" secondItem="FW2-vC-x9G" secondAttribute="bottom" constant="8" id="4Vd-tm-G76"/>
+                                        <constraint firstAttribute="bottom" secondItem="r52-Vq-gsA" secondAttribute="bottom" constant="8" id="90a-Tm-itM"/>
                                         <constraint firstItem="c81-3m-xhE" firstAttribute="leading" secondItem="k29-jL-IM1" secondAttribute="leading" constant="10" id="EDT-XP-T58"/>
+                                        <constraint firstItem="r52-Vq-gsA" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="HZb-Aw-JLs"/>
                                         <constraint firstItem="c81-3m-xhE" firstAttribute="top" secondItem="k29-jL-IM1" secondAttribute="top" constant="5" id="KWp-8L-PBz"/>
+                                        <constraint firstItem="r52-Vq-gsA" firstAttribute="top" secondItem="yfR-oa-3UZ" secondAttribute="bottom" constant="1" id="OnV-ba-ybh"/>
                                         <constraint firstAttribute="trailing" secondItem="yfR-oa-3UZ" secondAttribute="trailing" constant="10" id="Tgw-99-UrK"/>
-                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="FW2-vC-x9G" secondAttribute="trailing" constant="20" symbolic="YES" id="XHx-bM-KVm"/>
                                         <constraint firstItem="UOG-FP-9X1" firstAttribute="top" secondItem="k29-jL-IM1" secondAttribute="top" constant="4" id="bv6-JD-KgR"/>
                                         <constraint firstItem="yfR-oa-3UZ" firstAttribute="top" secondItem="k29-jL-IM1" secondAttribute="top" constant="25" id="gSu-8z-9sy"/>
-                                        <constraint firstItem="FW2-vC-x9G" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="iEL-1Y-7b8"/>
                                         <constraint firstAttribute="bottom" secondItem="c81-3m-xhE" secondAttribute="bottom" constant="5" id="pDQ-7Q-15K"/>
-                                        <constraint firstItem="FW2-vC-x9G" firstAttribute="top" secondItem="yfR-oa-3UZ" secondAttribute="bottom" constant="1" id="swr-5J-hrY"/>
                                         <constraint firstAttribute="trailing" secondItem="UOG-FP-9X1" secondAttribute="trailing" constant="10" id="tka-oS-Lk3"/>
                                         <constraint firstItem="UOG-FP-9X1" firstAttribute="leading" secondItem="c81-3m-xhE" secondAttribute="trailing" constant="10" id="udU-Xm-7TD"/>
                                     </constraints>
@@ -106,6 +120,7 @@
                                 <connections>
                                     <outlet property="avatarImage" destination="c81-3m-xhE" id="jpR-1H-zIG"/>
                                     <outlet property="languageLabel" destination="FW2-vC-x9G" id="FzO-Na-6Rj"/>
+                                    <outlet property="languageView" destination="r52-Vq-gsA" id="XPu-G2-n6L"/>
                                     <outlet property="loginLabel" destination="yfR-oa-3UZ" id="crn-Wt-KKX"/>
                                     <outlet property="nameLabel" destination="UOG-FP-9X1" id="iGG-OS-cEA"/>
                                 </connections>
@@ -529,13 +544,6 @@
             <point key="canvasLocation" x="-1417" y="137"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="4q1-pG-WSB"/>
-        <designable name="FW2-vC-x9G">
-            <size key="intrinsicContentSize" width="44" height="14.5"/>
-        </designable>
-        <designable name="jXE-Nq-l3I"/>
-    </designables>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="fork" width="1024" height="1024"/>
@@ -553,8 +561,8 @@
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
