--- a/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
+++ b/iOSEngineerCodeCheck/View/Base.lproj/Main.storyboard
@@ -390,24 +390,6 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4q1-pG-WSB" customClass="MarqueeLabel" customModule="MarqueeLabel">
-                                                <rect key="frame" x="103" y="12" width="283" height="36"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="36" id="VkR-xH-4cM"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                                <color key="textColor" systemColor="darkTextColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jXE-Nq-l3I" customClass="MarqueeLabel" customModule="MarqueeLabel">
-                                                <rect key="frame" x="103" y="73" width="283" height="17"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="17" id="ei1-i3-Mj4"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <button opaque="NO" clipsSubviews="YES" alpha="0.90000000000000002" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7i1-hV-6EN">
                                                 <rect key="frame" x="8" y="106" width="378" height="46"/>
                                                 <constraints>
@@ -429,34 +411,47 @@
                                                 </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8n-Ph-ZkI">
-                                                <rect key="frame" x="103" y="50" width="283" height="18"/>
+                                                <rect key="frame" x="103" y="49" width="283" height="18"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="WYS-w8-EFY"/>
-                                                    <constraint firstAttribute="height" constant="18" id="uqI-2e-nP8"/>
+                                                    <constraint firstAttribute="height" constant="18" id="aXg-Xb-WPp"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                 <color key="textColor" systemColor="systemGrayColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c6L-mA-xUk" customClass="JXMarqueeView" customModule="JXMarqueeView">
+                                                <rect key="frame" x="103" y="12" width="283" height="36"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="36" id="6YQ-XI-gqa"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSN-me-RHN" customClass="JXMarqueeView" customModule="JXMarqueeView">
+                                                <rect key="frame" x="103" y="72" width="283" height="17"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="17" id="Rc3-YQ-lyT"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
-                                            <constraint firstItem="E8n-Ph-ZkI" firstAttribute="top" secondItem="4q1-pG-WSB" secondAttribute="bottom" constant="2" id="1x2-40-2lw"/>
+                                            <constraint firstAttribute="trailing" secondItem="E8n-Ph-ZkI" secondAttribute="trailing" constant="8" id="2Wn-ya-Cxd"/>
+                                            <constraint firstItem="WSN-me-RHN" firstAttribute="top" secondItem="E8n-Ph-ZkI" secondAttribute="bottom" constant="5" id="4HL-gM-1v3"/>
                                             <constraint firstItem="Iim-eb-8Ad" firstAttribute="leading" secondItem="tz3-mN-A4W" secondAttribute="leading" constant="8" id="4Vp-xK-R6f"/>
                                             <constraint firstAttribute="height" constant="160" id="6RJ-LF-EAS"/>
                                             <constraint firstAttribute="trailing" secondItem="7i1-hV-6EN" secondAttribute="trailing" constant="8" id="Dbt-sr-iLf"/>
+                                            <constraint firstItem="E8n-Ph-ZkI" firstAttribute="top" secondItem="c6L-mA-xUk" secondAttribute="bottom" constant="1" id="DgM-9h-qYN"/>
+                                            <constraint firstAttribute="trailing" secondItem="WSN-me-RHN" secondAttribute="trailing" constant="8" id="GWh-og-jKa"/>
                                             <constraint firstItem="Iim-eb-8Ad" firstAttribute="top" secondItem="tz3-mN-A4W" secondAttribute="top" constant="8" id="HKa-r7-Eu3"/>
-                                            <constraint firstItem="jXE-Nq-l3I" firstAttribute="top" secondItem="E8n-Ph-ZkI" secondAttribute="bottom" constant="5" id="JiW-fY-0hc"/>
-                                            <constraint firstItem="E8n-Ph-ZkI" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="trailing" constant="5" id="Voh-Pe-ivU"/>
+                                            <constraint firstItem="WSN-me-RHN" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="trailing" constant="5" id="HMo-k8-1Vj"/>
+                                            <constraint firstItem="E8n-Ph-ZkI" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="trailing" constant="5" id="TC0-cE-2pp"/>
                                             <constraint firstAttribute="bottom" secondItem="7i1-hV-6EN" secondAttribute="bottom" constant="8" id="bsI-Rz-KrU"/>
-                                            <constraint firstItem="4q1-pG-WSB" firstAttribute="top" secondItem="tz3-mN-A4W" secondAttribute="top" constant="12" id="chs-2I-f8R"/>
-                                            <constraint firstAttribute="trailing" secondItem="4q1-pG-WSB" secondAttribute="trailing" constant="8" id="cua-qa-mfP"/>
-                                            <constraint firstAttribute="trailing" secondItem="E8n-Ph-ZkI" secondAttribute="trailing" constant="8" id="erL-2j-1Am"/>
+                                            <constraint firstItem="c6L-mA-xUk" firstAttribute="top" secondItem="tz3-mN-A4W" secondAttribute="top" constant="12" id="ch7-vy-sR5"/>
                                             <constraint firstItem="7i1-hV-6EN" firstAttribute="leading" secondItem="tz3-mN-A4W" secondAttribute="leading" constant="8" id="iZL-dw-VsG"/>
-                                            <constraint firstAttribute="trailing" secondItem="jXE-Nq-l3I" secondAttribute="trailing" constant="8" id="l8e-an-x5g"/>
+                                            <constraint firstItem="c6L-mA-xUk" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="trailing" constant="5" id="l8Q-WZ-MPr"/>
                                             <constraint firstItem="7i1-hV-6EN" firstAttribute="top" secondItem="Iim-eb-8Ad" secondAttribute="bottom" constant="8" id="lrz-Ev-7dG"/>
-                                            <constraint firstItem="jXE-Nq-l3I" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="trailing" constant="5" id="pv3-TD-SxD"/>
-                                            <constraint firstItem="4q1-pG-WSB" firstAttribute="leading" secondItem="Iim-eb-8Ad" secondAttribute="trailing" constant="5" id="vSy-Zq-mu6"/>
+                                            <constraint firstAttribute="trailing" secondItem="c6L-mA-xUk" secondAttribute="trailing" constant="8" id="yb4-ak-nyp"/>
                                         </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -509,13 +504,13 @@
                     </view>
                     <navigationItem key="navigationItem" id="J6o-vL-S1z"/>
                     <connections>
-                        <outlet property="bioLable" destination="jXE-Nq-l3I" id="f10-N0-ltx"/>
+                        <outlet property="bioLabel" destination="WSN-me-RHN" id="7nB-eu-qvE"/>
                         <outlet property="chartView" destination="tYg-ZS-HYd" id="KuN-GO-JOM"/>
                         <outlet property="forkLabel" destination="ZMv-4f-X2V" id="GE8-Jt-mkI"/>
                         <outlet property="imageView" destination="Iim-eb-8Ad" id="oQa-ha-SMe"/>
                         <outlet property="issueLabel" destination="Z5G-Uz-qNe" id="NG9-JN-OYA"/>
                         <outlet property="loginLabel" destination="E8n-Ph-ZkI" id="Fkn-D1-W2j"/>
-                        <outlet property="nameLabel" destination="4q1-pG-WSB" id="g34-4G-OvS"/>
+                        <outlet property="nameLabel" destination="c6L-mA-xUk" id="7bQ-Gt-h7b"/>
                         <outlet property="repositoryDescriptionLabel" destination="3df-mJ-WM7" id="YtO-SD-lN7"/>
                         <outlet property="repositoryNameLabel" destination="3cO-bt-mje" id="KLi-4W-mxV"/>
                         <outlet property="showAccountButton" destination="7i1-hV-6EN" id="KfI-Yc-Pcn"/>
@@ -544,18 +539,11 @@
             <point key="canvasLocation" x="-1417" y="137"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="4q1-pG-WSB"/>
-        <designable name="jXE-Nq-l3I"/>
-    </designables>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="fork" width="1024" height="1024"/>
         <image name="issues" width="1024" height="1024"/>
         <image name="star" width="1024" height="1024"/>
-        <systemColor name="darkTextColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
